# otobusum-anlik-backend

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.graphhopper  README.md  docker-compose.yml  graphhopper-config.yml
.sqlx/: query-023b8f36336ede16e2e227610ae1034bfadfb61c6e3666ba5940b02a2914664e.json  query-0d449d44e5784b40e997ba071b5bf7ffd1061daa70248cf76700ae4709913e5c.json  query-0dc64c3fca06a5c0588e4f5ab866f23890b16fa8a3ef9d5246a9b156a149c536.json  query-0e7e344b8f4127bb3873eec7922a89e7baa51566e66326d2d5e7ca80a80568f1.json  query-0e9402a26c2ec709d56c29ea544669e41e379b16b56e6000a2da6ed92bfbbab9.json  query-108c853018ef8973e4893c685d9bd40ed64810513c1f94c4ee1b2484d74c2c6a.json  query-1a5c529640740281879758425b883279be9f489a92406ee6c49815682d745f31.json  query-2509baf0908b680a86f9ce0b0b3d7516a9f21e50d7114161e345d2ba79a984d9.json  query-29786c0a4878fd49744253a369fb4707e5b82b3295b4e91cfe6a848db7dbd3a5.json  query-2d5a36568d7de04c764d679815a4dc39cc31f8d33ea73fbc09d03a98679fe5b9.json  query-2e0e1030cfebf2f45299e06b5c4f6bd806249a4552a545da84fac21dce6e6617.json  query-3739188bf3150b01a15da0c34a7ccb905be10405a34c66a40ab40c4751589922.json  query-3bfab58546b75c5f3e2b1e82464b13c23359bcfdcbaf1b4779f91e634ed2e144.json  query-48503d2c522ff9111ac84bc680e15217c84d4666bdc7b28c96d1ce5d407723d8.json  query-4f87e73713581216db7e79e887695fcb68f4084cb2ae0d6b0f6f3662abfa96b9.json  query-520aaa280b698122c3308f651355c646782948b9cc68fd761e08595736a4a3e6.json  query-5216a97f73faf7718cf948e1699bfdbb429c745005550972e359138703bb216f.json  query-556332c16f3b5b70fcefd6bb41ad81e9942f6670ad250478e264c2c1cc6ebb0f.json  query-57ed4c191622b1605f13bdaf0b52076497922e6c41825b975e431f2220172dfb.json  query-604fe9af98fd00a62dfac5c17448f111c5ab0f661cae00863870d2979ba354b4.json  query-6306de28d9de169675316dc2b3ac6777fffb373836fb92b6d7da64137ac123d7.json  query-63afb1e5b173e577c19a487e8d2177f86b852f5ce524b60e6d9c8204637b25cc.json  query-6565d8b39ec0dc7bb91f33f98fff97d2a9b2ea7bc46f6e4e727b57b14839c49f.json  query-6dd548dbd21e614537070ddaf8134712ac679c8aa9e08d09f0fc7b9559e6861d.json  query-6fa739f7d48a2f3008732122addf9fdb75df51205752f88cfe90bdd564d8af7c.json  query-6fcb826262e0b1cf4e8abbead47923cf6b3aa184c9d815a12ee5096a6ad87422.json  query-7076e6301c7b89c4bd58f28f69f38083f232ed3c6f370ea96686097f89f2b9aa.json  query-74a70640b15057b475308477a606656c02975ebae82a69946b6505df2c2bdd45.json  query-84cf56b05afe332606cc54c3dda4ce3fbc3cbe2ed4d6a5299cf2e9db627d67af.json  query-86cdce3647a486a38539cbd7e68cc7f2a45c1cfd2af5bc9e91568215ec853e34.json  query-88b1f4cd856053219b491240acd72edddd0fe8c82e1885e647f520dc6d38dc3b.json  query-8d9273678449e302b9f31f38546afe4e40f5aa1c29175ea3e7870b65eefc09ce.json  query-94908bea2ee1ae8949a7018a31d7145c66f6e5969590871c3053e5fd4c4e39d5.json  query-97b646bb779d97b4017c7d111543401ecedabfad2c8dd5f5f9a68e98775f8d95.json  query-985f71923b88c6802994f9cb8b1befe2b8d457c93a41391da12d42f494d944d4.json  query-a7ff0fa9a9008e486338e0f393c692a956657c6ecef8316c6b5e5b8377217c5e.json  query-aae7be7d162f17a19e2f16bd98f3192e63ed0d0d5aff16b8deca73d4decd5171.json  query-b1f2d15f8c5fb7ab0a4a895eb7d8ce4cdac823ae5937f8c1b38b9fb88489a07e.json  query-b21cd7d22a685597051ccaaaf191f8718a0291193c3da1ec669c75681d5d8c31.json  query-b24c8991c3bcdce47356c113257b23915ac911fb24024c620c30387a3090e716.json  (+12 more)
migrations/: 20241121190756_initial.sql  20241127091319_routes.sql  (+24 more)
scripts/: Cargo.toml
scripts/src/: import_line_stops.rs  import_lines.rs  import_routes.rs  import_stops.rs  lib.rs  request.rs
scripts/src/models/: routes.rs  stop.rs
scripts/src/utils/: mod.rs  soap.rs
server/: Cargo.toml
server/src/: main.rs
server/src/database/: mod.rs  stop.rs
server/src/models/: bus.rs  line.rs
server/src/routes/: mod.rs  search.rs  stop.rs
(+53 files in other folders)
