[package]
default-run = "server"
edition = "2021"
name = "iett_stops_with_busses"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "import"
path = "src/import.rs"


[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["macros"] }
csv = "1.3.1"
dotenvy = "0.15.7"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
