[package]
default-run = "server"
edition = "2021"
name = "otobusum-anlik-backend"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "import"
path = "src/scripts/import.rs"

[[bin]]
name = "import_routes"
path = "src/scripts/import_routes.rs"

[[bin]]
name = "route_import"
path = "src/scripts/route_plan_import.rs"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["macros"] }
csv = "1.3.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "cors",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
