[package]
edition = "2021"
name = "otobusum-anlik-backend"
version = "1.0.0"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["macros"] }
cached = { version = "0.54.0", features = ["redis_connection_manager", "redis_tokio"] }
chrono = { version =  "0.4.39", features = ["serde"]}
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "cors",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
