[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
serde-xml-rs = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
